# rust_backend_api

my_actix/: Cargo.toml  test.db
my_actix/src/: lib.rs  main.rs
my_actix/src/components/index/: routes.rs
my_actix/src/components/tasks/: model.rs  routes.rs
my_actix/src/config/: database.rs
my_actix/src/utils/: filters.rs
my_axum/: Cargo.toml  diesel.toml  test.db
my_axum/migrations/2023-05-24-162209_create_tasks/: up.sql
my_axum/migrations/2023-05-28-123113_add_timestamp_cols_tasks/: down.sql  up.sql
my_axum/src/: lib.rs  main.rs
my_axum/src/components/: mod.rs
my_axum/src/components/index/: routes.rs
my_axum/src/components/tasks/: mod.rs  model.rs  routes.rs
my_axum/src/config/: database.rs
my_rocket/: Cargo.toml  Rocket.toml  diesel.toml  test.db
my_rocket/src/: main.rs
my_rocket/src/components/index/: routes.rs
my_rocket/src/components/tasks/: model.rs  routes.rs
my_rocket/src/config/: database.rs
my_rocket/src/utils/: errors.rs  filters.rs  mod.rs
