[package]
name = "my_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["sqlite", "postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_valid = "0.16.1"
uuid = { version = "1", features = ["v4", "serde"] }