[package]
name = "my_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["sqlite", "postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_valid = "0.16.1"
tokio = { version = "1.28.2", features = ["full"] }
