[package]
name = "my_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["sqlite", "postgres", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
libsqlite3-sys = "0.26.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool", "diesel_sqlite_pool"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_valid = "0.16.1"
